--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^7.3.2",
     "@mui/x-date-pickers": "^8.11.3",
     "axios": "^1.12.2",
+    "classnames": "^2.5.1",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.18",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-helmet-async": "^2.0.5",
